# MM-Phytium

./: .gitignore  CMakeLists.txt  Cmult.h  DCmult.h  LICENSE  Makefile  README.md  Updates.md  build.sh  compile.sh  fpdiff.cpp  gemm.cpp  main.cpp  mult.h  run.sh  transfer.h
libShalom/: PACK.h  SMM_m8n12_new_single.c
microkernels/: SMM_f32.c  microkernels.h  microkernerls.h  mk2_f32.cpp  mk_f32.cpp  mk_s32.cpp  mk_v2_f32.cpp  pack2_f32.cpp  pack_f32.cpp  pack_s32.cpp  pack_v2_f32.cpp
mmft/: README.md  updates.md
mmft/src/common/: Type.h
mmft/src/gemm/: GEMM.h
mmft/src/matrix/: DenseMat.h  Mat.h
sparce/: Cmult.h  DCmult.h  main.cpp  readme.md  transfer.h
sparce/include/: LN-sp.hpp  dense_accumulator.h  popcnt.h  sparse_accumulator.h  spgemm.hpp  spgemm_defs.h  spgemm_utils.h  utils.h
test/: Makefile  basic_test_for_sparce.cpp  kernels_armpl_test.cpp  kernels_eigen_test.cpp  kernels_libshalom_test.cpp  kernels_test.cpp  size_test.sh  sparce_test.cpp  sparce_test_basic.cpp  test.h  test_helpers.h
